tests/valid/v01_simple_daily.tsl
# VALID TEST 1: Simple daily recurring task
# Tests: basic task structure, EVERY DAY AT schedule

TASK dailyReport {
    RUN "report.py"
    EVERY DAY AT 06:00
}
